<resources>
    <string name="app_name">Anywhere</string>
    <string name="title_activity_home">Anywhere</string>
    <string name="title_activity_configure_post">配置</string>
    <string name="title_activity_create_post">创建</string>
    <string name="title_activity_nearby_posts">附近</string>
    <string name="title_activity_settings_nav">设置</string>
    <string name="title_activity_settings_basic">基本信息</string>
    <string name="title_activity_settings_password">修改密码</string>
    <string name="title_activity_settings_configure">配置信息</string>
    <string name="title_activity_post_detail">详细信息</string>
    <string name="title_activity_comments">评论</string>
    <string name="title_activity_sign_up">注册</string>
    <string name="title_activity_login">登录</string>

    <string name="user_id">用户ID</string>
    <string name="password">密码</string>
    <string name="user_name">用户昵称</string>
    <string name="remember_login_info">记住登录信息</string>
    <string name="auto_login">自动登录</string>
    <string name="log_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="repeat_password">重复密码</string>
    <string name="email">邮箱</string>
    <string name="cancel">取消</string>

    <string name="create_post">创建Post</string>
    <string name="nearby_posts">附近的Post</string>
    <string name="settings">设置</string>
    <string name="log_out">注销</string>

    <string name="basic_user_info">基本信息</string>
    <string name="alter_password">修改密码</string>
    <string name="configure">配置信息</string>

    <string name="source">来源</string>
    <string name="album">相册</string>
    <string name="camera">相机</string>
    <string name="confirm">确认</string>
    <string name="original_password">旧密码</string>
    <string name="new_password">新密码</string>

    <string name="configure_post">配置Post</string>
    <string name="current_location">当前位置</string>
    <string name="title">标题</string>
    <string name="style">样式</string>
    <string name="style1">样式一</string>
    <string name="style2">样式二</string>
    <string name="style3">样式三</string>
    <string name="set_lock">设置密码</string>
    <string name="input_content">输入内容</string>
    <string name="insert_picture">添加图片</string>
    <string name="refresh">刷新</string>
    <string name="author">作者</string>
    <string name="comments">评论</string>
    <string name="submit_comment">提交评论</string>
    <string name="input_comment">输入评论</string>

    <string name="please_wait">请等待</string>
    <string name="user_id_cannot_be_empty">用户ID不能为空</string>
    <string name="password_cannot_be_empty">密码不能为空</string>
    <string name="password_length">密码长度[6,20]</string>
    <string name="logging_in">正在登录</string>
    <string name="login_succeed">登录成功</string>
    <string name="no_such_user">用户不存在</string>
    <string name="password_wrong">密码错误</string>

    <string name="user_id_with_numbers_and_characters">由字母和数字组成</string>
    <string name="password_inconsistent">密码不一致</string>
    <string name="user_name_cannot_be_empty">昵称不能为空</string>
    <string name="email_cannot_be_empty">请填写邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="sign_up_succeed">注册成功</string>
    <string name="user_already_exists">用户已存在</string>

    <string name="title_cannot_be_empty">标题不能为空</string>
    <string name="submitting">正在提交</string>
    <string name="create_post_succeed">创建成功</string>
    <string name="please_enable_LBS">请打开LBS后重试</string>
    <string name="incorrect_email_format">请检查邮箱格式</string>
    <string name="fetching">正在获取</string>
    <string name="no_posts_around">附近没有Post...创建一个吧...</string>

    <string name="fetch_pic_failure">图片获取失败</string>
    <string name="comment_cannot_be_empty">评论不能为空</string>
    <string name="no_comments">当前没有评论</string>
    <string name="create_comment_succeed">评论成功</string>

    <string name="no_change_to_data">没有修改信息</string>
    <string name="change_info_succeed">信息修改成功</string>
    <string name="avatar_not_available">头像加载失败</string>
    <string name="alter_password_succeed">修改成功</string>

    <string name="log_out_info">退出当前帐号</string>
    <string name="press_again_to_exit">再按一次退出程序</string>

    <string name="fail_to_get_location_description">无法获得地址描述信息</string>

    <string name="language">语言</string>
    <string name="restart_app">重启App后生效</string>

    <string name="sorting">排序方式</string>
    <string name="create_time">创建时间</string>
    <string name="comment_number">评论数</string>
    <string name="like_number">喜欢数</string>
    <string name="author_id">作者ID</string>

    <string name="created_by">创建者:</string>

    <string name="no_content">(无内容)</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
