<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.colinlvbin.extreme.anywhere.activity.ShowPostsActivity">

    <LinearLayout
        android:id="@+id/temp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/current_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/location_description_show_posts"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/RbButton.Blue"
            android:id="@+id/refresh_show_posts"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/sorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:id="@+id/sorting_criteria_group_show_posts"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/sort_by_time_show_posts"
                android:checked="true"
                android:text="@string/create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/sort_by_title_show_posts"
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/sort_by_comment_number_show_posts"
                android:text="@string/comment_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/sort_by_like_number_show_posts"
                android:text="@string/like_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/temp"
        android:orientation="vertical"
        android:id="@+id/swipeLayout"
        >
        <ListView
            android:id="@+id/post_list_show_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
