<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.colinlvbin.extreme.anywhere.activity.SettingsNavActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            style="@style/RbButton.Darken"
            android:id="@+id/basic_settings"
            android:text="@string/basic_user_info"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            style="@style/RbButton.Darken"
            android:id="@+id/password_settings"
            android:text="@string/alter_password"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/RbButton.Darken"
            android:id="@+id/configure_settings"
            android:text="@string/configure"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            style="@style/RbButton.Darken"
            android:id="@+id/return_nav_settings"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>
