<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.colinlvbin.extreme.anywhere.activity.CreatePostActivity">

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/RbButton.Blue"
            android:id="@+id/confirm_button_create_post"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/RbButton.Yellow"
            android:id="@+id/cancel_button_create_post"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/post_title_create_post"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/post_creator_create_post"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/post_content_create_post"
                android:inputType="textMultiLine"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:minLines="6"
                android:maxLines="6"
                android:gravity="left|top"
                android:hint="@string/input_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                style="@style/RbButton.Purple"
                android:id="@+id/add_pic_button_create_post"
                android:text="@string/insert_picture"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/post_picture_create_post"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
